# HIP-

./: .gitattributes  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  run_gui.bat
.github/workflows/: tests.yml
cpp/: BUILD_WINDOWS.md  build_ctypes.ps1  build_pybind.ps1  hip_features.cpp  hip_features.hpp  hip_features_dll.cpp  hip_features_pybind.cpp  setup.py
examples/: README.md
examples/input/: combined_INSC_INSA.fasta  combined_INSC_INSB.fasta  combined_INSC_INSC.fasta  combined_INS_IAPP.fasta  combined_INS_NPY.fasta
src/hip_features_score_gui/: __init__.py  csv_output.py  fasta_io.py  feature_schema.py  gui.py  native_backend.py  pipeline.py  ridge_scoring.py
src/hip_features_score_gui/native/: _hip_features_pybind.cp312-win_amd64.pyd
tests/: test_batch.py  test_end_to_end.py  test_fasta_io.py  test_gui_import.py  test_native_backend.py  test_ridge_scoring.py
tests/data/: combined_example_small.fasta  combined_example_small_expected.csv
